a linkedlist is a bit more expressive.
Signed-off-by: Kristof Szabados <Kristof.Szabados@ericsson.com>